# Building-Browser-Agents

./: .env  autogen_to_langgraph_agent.py  browser_agent_api.py  checkpointer.db  helpers.py  local_autogen_browser_agent.py  main.py  prompt_for_planner.txt  pyproject.toml  requirements.txt  sample.py  sample_checkpointer.db  simple_browser_agent.ipynb  simple_browser_agent.py  simple_sample_graph.ipynb  smple_autogen_browser_agent
frontend/: index.html
web_surfer_agent/: _multimodal_web_surfer.py  _prompts.py  _tool_definitions.py
