[project]
name = "buidling-browser-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio>=5.36.2",
    "igraph>=0.11.9",
    "instructor>=1.9.2",
    "ipykernel>=6.29.5",
    "langsmith>=0.4.4",
    "litellm>=1.74.0.post1",
    "multion>=1.1.0",
    "openai>=1.93.3",
    "pandas>=2.3.1",
    "pickleshare>=0.7.5",
    "playwright>=1.53.0",
    "plotly>=6.2.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
]
